--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-
-<form [formGroup] = "formdata" (ngSubmit) = "onClickSubmit(formdata.value)" >
+<div class="position-absolute top-50 start-50 translate-middle container">
+<form  [formGroup] = "formdata" (ngSubmit) = "onClickSubmit(formdata.value)" >
    <div class="mb-3">
      <label for="exampleInputEmail1" class="form-label">User Name</label>
      <input type = "text"  name = "loginUsername" placeholder = "user name" formControlName="loginUsername" 
@@ -10,5 +10,6 @@
      <input  type = "password" class = "fortextbox" name="loginPassword" 
      placeholder = "password" formControlName = "loginPassword" class="form-control" id="exampleInputPassword1">
    </div>
-   <input type = "submit" class = "forsubmit" value = "Log In">
+   <input type = "submit" class="btn btn-primary" value = "Log In">
 </form>
+</div>
