--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -6,15 +6,13 @@
         <br>
         <input type="password" placeholder="Password" formControlName="password" required>
         <br>
-        <input type="password" placeholder="Confirm password" formControlName="password2"required>
+        <input type="password" placeholder="Confirm password" formControlName="password2" required>
         <br><br>
-        <input type="text" placeholder="Firstname" formControlName="firstname" required>
+        <input type="text" placeholder="Firstname" formControlName="firstName" required>
         <br>
-        <input type="text" placeholder="Lastname" formControlName="lastname" required>
+        <input type="text" placeholder="Lastname" formControlName="lastName" required>
         <br><br>
         <input type="email" placeholder="Email" formControlName="email" required>
-        <br>
-        <input type="email" placeholder="Confirm email" formControlName="email2" required>
         <br><br>
         <button type="submit">Create New User</button>
         
