fully working no tests yet

--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -1,5 +1,5 @@
-
-<div class="card" style="width: 20rem;">
+<br><br><br><br>
+<div class="card" style="width: 20rem; margin: auto; border: auto;">
     <form [formGroup]="registerForm" (ngSubmit)="register()">
 
         <input type="text" placeholder="Username"  formControlName="username" required>
