Added bootstrap to the project

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<div class="dashboard">
-    <button>Create Bank Account</button>
+<div class="formBox">
+    <button routerLink="/createBankAccountForm" class="btn btn-primary">Create Bank Account</button>
 </div>
