--- a/src/app/createBankAccountForm/create-bank-account-form/create-bank-account-form.component.html
+++ b/src/app/createBankAccountForm/create-bank-account-form/create-bank-account-form.component.html
@@ -1,19 +1,23 @@
-<button routerLink="/feed">Back to "main page"</button>
-<p>This is our create bank account form!</p>
+<div class="formBox">
+    <button routerLink="/feed" class="btn btn-secondary">Back to "main page"</button>
+    <h4>This is our Create Bank Account Form.</h4>
 
-<div class="mb-3">
-    <label for="nameId" class="form-label">Name</label>
-    <input [(ngModel)]="name" class="form-control" id="nameId" name="nameField">
+    <div class="form-group">
+        <label for="nameId" class="form-label">Name: </label>
+        <input [(ngModel)]="name" class="form-control" id="nameId" name="nameField">
+    </div>
+    <div class="form-group">
+        <label for="descriptionId" class="form-label">Description: </label>
+        <input [(ngModel)]="description" class="form-control" id="descriptionId" name="descriptionField">
+    </div>
+    <div class="form-group">
+        <label for="accountType" class="form-label">Account Type: </label>
+        <select [(ngModel)]="accountType" name="accountType" class="form-select">
+                <option value="1">Checking</option>
+                <option value="2">Savings</option>
+            </select>
+    </div>
+
+    <br/>
+    <button (click)="createBankAccount()" class="btn btn-primary">Create Account</button>
 </div>
-<div class="mb-3">
-    <label for="descriptionId" class="form-label">Description</label>
-    <input [(ngModel)]="description" class="form-control" id="descriptionId" name="descriptionField">
-</div>
-<div class="mb-3">
-    <label for="accountType" class="form-label">Account Type</label>
-    <select [(ngModel)]="accountType" name="accountType">
-        <option value="1">Checking</option>
-        <option value="2">Savings</option>
-    </select>
-</div>
-<button (click)="createBankAccount()">Create Account</button>
