Password mismatch notification added yet to iron out bugs

--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -7,6 +7,10 @@
     <div *ngIf="regSuccess == 1" class="alert alert-primary my-2">
         Registration Success
     </div>
+
+    <div *ngIf="passwordMismatch" class="alert alert-secondary my-2">
+        Password Mismatch
+    </div>
     
 
 
