--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -8,7 +8,7 @@
         Registration Success
     </div>
 
-    <div *ngIf="passwordMismatch" class="alert alert-secondary my-2">
+    <div id="mismatchNotification" class="alert alert-secondary d-none my-2">
         Password Mismatch
     </div>
     
@@ -18,9 +18,9 @@
 
         <input type="text" placeholder="Username"  formControlName="username" required>
         <br>
-        <input type="password" placeholder="Password" formControlName="password" required>
+        <input type="password" placeholder="Password" formControlName="password" [(ngModel)]="password" required>
         <br>
-        <input type="password" placeholder="Confirm password" formControlName="password2" required>
+        <input type="password" placeholder="Confirm password" formControlName="password2" [(ngModel)]="password2" required>
         <br><br>
         <input type="text" placeholder="Firstname" formControlName="firstName" required>
         <br>
