--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -1,36 +1,82 @@
-<div class="card" style="width: 20rem; margin: auto; border: auto;">
+<section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px;">
+                        <div *ngIf="regSuccess == 2" class="alert alert-danger my-2">
+                            Registration Failed
+                        </div>
+                        
+                        <div *ngIf="regSuccess == 1" class="alert alert-primary my-2">
+                            Registration Success
+                        </div>
+                        
+                        <div id="mismatchNotification" class="alert alert-secondary d-none my-2">
+                            Password Mismatch
+                        </div>
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mb-5">Register New Account</h2>
+                            
+                <form [formGroup]="registerForm" (ngSubmit)="register()">
+                                
+                    <div class="form-outline mb-4">
+                        <input type="text" id="username" class="form-control form-control-lg" formControlName="username" required/>
+                        <label class="form-label" for="username">Username</label>
+                    </div>
 
-    <div *ngIf="regSuccess == 2" class="alert alert-danger my-2">
-        Registration Failed
-    </div>
+                    <div class="form-outline mb-4">
+                        <input type="text" id="firstname" class="form-control form-control-lg" formControlName="firstName" required/>
+                        <label class="form-label" for="email">Firstname</label>
+                    </div>
 
-    <div *ngIf="regSuccess == 1" class="alert alert-primary my-2">
-        Registration Success
-    </div>
+                    <div class="form-outline mb-4">
+                        <input type="test" id="lastname" class="form-control form-control-lg" formControlName="lastName" required/>
+                        <label class="form-label" for="lastname">Lastname</label>
+                    </div>
 
-    <div id="mismatchNotification" class="alert alert-secondary d-none my-2">
-        Password Mismatch
-    </div>
+                    <div class="form-outline mb-4">
+                        <input type="email" id="email" class="form-control form-control-lg" formControlName="email" required/>
+                        <label class="form-label" for="email">Email</label>
+                    </div>
+
+                    <div class="form-outline mb-4">
+                        <input type="password" id="password" class="form-control form-control-lg" formControlName="password" [(ngModel)]="password" required/>
+                        <label class="form-label" for="password">Password</label>
+                    </div>
+
+                    <div class="form-outline mb-4">
+                        <input type="password" id="password2" class="form-control form-control-lg" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" required/>
+                        <label class="form-label" for="password2">Confirm password</label>
+                    </div>
+
+                    <div class="form-check d-flex justify-content-center mb-5">
+                        <input
+                        class="form-check-input me-2"
+                        type="checkbox"
+                        value=""
+                        id="form2Example3cg"
+                        />
+                    <label class="form-check-label" for="form2Example3g">
+                      I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                    </label>
+                    </div>
     
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                    </div>
+    
+                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
+  
+                </form>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-
-    <form [formGroup]="registerForm" (ngSubmit)="register()">
-
-        <input type="text" placeholder="Username"  formControlName="username" required>
-        <br>
-        <input type="password" placeholder="Password" formControlName="password" [(ngModel)]="password" required>
-        <br>
-        <input type="password" placeholder="Confirm password" formControlName="password2" [(ngModel)]="password2" required>
-        <br><br>
-        <input type="text" placeholder="Firstname" formControlName="firstName" required>
-        <br>
-        <input type="text" placeholder="Lastname" formControlName="lastName" required>
-        <br><br>
-        <input type="email" placeholder="Email" formControlName="email" required>
-        <br><br>
-        <button type="submit">Create New User</button>
-        
-    </form>
-</div>
 
 
