--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -4,70 +4,59 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                     <div class="card" style="border-radius: 15px;">
-                        <div *ngIf="regSuccess == 2" class="alert alert-danger my-2">
-                            Registration Failed
-                        </div>
-                        
-                        <div *ngIf="regSuccess == 1" class="alert alert-primary my-2">
-                            Registration Success
-                        </div>
-                        
-                        <div id="mismatchNotification" class="alert alert-secondary d-none my-2">
-                            Password Mismatch
-                        </div>
                         <div class="card-body p-5">
                             <h2 class="text-uppercase text-center mb-5">Register New Account</h2>
                             
-                <form [formGroup]="registerForm" (ngSubmit)="register()">
+                            <form [formGroup]="registerForm" (ngSubmit)="register()">
                                 
                     <div class="form-outline mb-4">
-                        <input type="text" id="username" class="form-control form-control-lg" formControlName="username" required/>
+                        <input type="text" id="username" class="form-control form-control" formControlName="username" required/>
                         <label class="form-label" for="username">Username</label>
                     </div>
-
+                    
                     <div class="form-outline mb-4">
-                        <input type="text" id="firstname" class="form-control form-control-lg" formControlName="firstName" required/>
+                        <input type="text" id="firstname" class="form-control form-control" formControlName="firstName" required/>
                         <label class="form-label" for="email">Firstname</label>
                     </div>
 
                     <div class="form-outline mb-4">
-                        <input type="test" id="lastname" class="form-control form-control-lg" formControlName="lastName" required/>
+                        <input type="test" id="lastname" class="form-control form-control" formControlName="lastName" required/>
                         <label class="form-label" for="lastname">Lastname</label>
                     </div>
 
                     <div class="form-outline mb-4">
-                        <input type="email" id="email" class="form-control form-control-lg" formControlName="email" required/>
+                        <input type="email" id="email" class="form-control form-control" formControlName="email" required/>
                         <label class="form-label" for="email">Email</label>
                     </div>
 
                     <div class="form-outline mb-4">
-                        <input type="password" id="password" class="form-control form-control-lg" formControlName="password" [(ngModel)]="password" required/>
+                        <input type="password" id="password" class="form-control form-control" formControlName="password" [(ngModel)]="password" required/>
                         <label class="form-label" for="password">Password</label>
                     </div>
-
+                    
                     <div class="form-outline mb-4">
-                        <input type="password" id="password2" class="form-control form-control-lg" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" required/>
+                        <input type="password" id="password2" class="form-control form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" required/>
                         <label class="form-label" for="password2">Confirm password</label>
                     </div>
 
-                    <div class="form-check d-flex justify-content-center mb-5">
-                        <input
-                        class="form-check-input me-2"
-                        type="checkbox"
-                        value=""
-                        id="form2Example3cg"
-                        />
-                    <label class="form-check-label" for="form2Example3g">
-                      I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                    </label>
+                    <div *ngIf="regSuccess == 2" class="alert alert-danger my-2">
+                        Registration Failed
                     </div>
-    
+                    
+                    <div *ngIf="regSuccess == 1" class="alert alert-primary my-2">
+                        Registration Success
+                    </div>
+                    
+                    <div id="mismatchNotification" class="alert alert-secondary d-none my-2">
+                        Password Mismatch
+                    </div>
+                    
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                     </div>
-    
+                    
                     <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
-  
+                    
                 </form>
   
               </div>
