--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-register-user></app-register-user>
+<!-- <app-register-user></app-register-user> -->
+<app-income-expense></app-income-expense>
