--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<nav>
-    <a routerLink="/login">Login</a>
-</nav>
-
+<app-navbar></app-navbar>
+<!-- <app-home></app-home> -->
 <router-outlet></router-outlet>
