--- a/src/app/createBankAccountForm/create-bank-account-form/create-bank-account-form.component.html
+++ b/src/app/createBankAccountForm/create-bank-account-form/create-bank-account-form.component.html
@@ -1,18 +1,18 @@
+<app-dashboard-logged></app-dashboard-logged>
 <div class="formBox">
-    <button routerLink="/feed" class="btn btn-secondary">Back to "main page"</button>
     <h4>This is our Create Bank Account Form.</h4>
 
     <div class="form-group">
         <label for="nameId" class="form-label">Name: </label>
-        <input [(ngModel)]="name" class="form-control" id="nameId" name="nameField">
+        <input [(ngModel)]="formName" class="form-control" id="nameId" name="nameField">
     </div>
     <div class="form-group">
         <label for="descriptionId" class="form-label">Description: </label>
-        <input [(ngModel)]="description" class="form-control" id="descriptionId" name="descriptionField">
+        <input [(ngModel)]="formDescription" class="form-control" id="descriptionId" name="descriptionField">
     </div>
     <div class="form-group">
         <label for="accountType" class="form-label">Account Type: </label>
-        <select [(ngModel)]="accountType" name="accountType" class="form-select">
+        <select [(ngModel)]="formAccountType" name="accountType" class="form-select">
                 <option value="1">Checking</option>
                 <option value="2">Savings</option>
             </select>
