--- a/src/app/dashboard-logged/dashboard-logged.component.html
+++ b/src/app/dashboard-logged/dashboard-logged.component.html
@@ -6,10 +6,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/login">Login</a>
+                <a class="nav-link" routerLink="/feed">My Account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/feed">Register</a>
+                <a class="nav-link" routerLink="/createBankAccountForm">Create Account</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/login">Logout</a>
             </li>
         </ul>
     </div>
