--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,7 +1,7 @@
+<app-dashboard-logged></app-dashboard-logged>
 <div class="formBox">
-    <button routerLink="/createBankAccountForm" class="btn btn-primary">Create Bank Account</button>
     <h4>This is our Bank Account Feed.</h4>
-    <p>Currently displaying accounts for userId=1</p>
+    <p>Currently displaying accounts for this user.</p>
     <ul>
         <li *ngFor="let currentBankAccount of bankAccounts">
             <div>Bank Account Name: {{currentBankAccount.name}}</div>
