added background for pages

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,19 @@
-<app-dashboard></app-dashboard>
-<div class="position-absolute top-50 start-50 translate-middle container">
-    <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
-        <div *ngIf="showErrorMessage">
-            <p style="color: red;">Invalid username and password Please try again</p>
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">User Name</label>
-            <input type="text" name="loginUsername" placeholder="user name" formControlName="loginUsername" class="form-control" id="exampleInputEmail1">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="fortextbox" name="loginPassword" placeholder="password" formControlName="loginPassword" class="form-control" id="exampleInputPassword1">
-        </div>
-        <input type="submit" class="btn btn-primary" value="Log In">
-    </form>
-</div>
+<section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+    <app-dashboard></app-dashboard>
+    <div class="position-absolute top-50 start-50 translate-middle container">
+        <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
+            <div *ngIf="showErrorMessage">
+                <p style="color: red;">Invalid username and password Please try again</p>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">User Name</label>
+                <input type="text" name="loginUsername" placeholder="user name" formControlName="loginUsername" class="form-control" id="exampleInputEmail1">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="fortextbox" name="loginPassword" placeholder="password" formControlName="loginPassword" class="form-control" id="exampleInputPassword1">
+            </div>
+            <input type="submit" class="btn btn-primary" value="Log In">
+        </form>
+    </div>
+</section>
