--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" routerLink="/login">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/feed">Register</a>
+                <a class="nav-link" routerLink="/register">Register</a>
             </li>
         </ul>
     </div>
