--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,13 +1,14 @@
-<app-dashboard-logged></app-dashboard-logged>
-<div class="formBox">
-    <h4>This is our Bank Account Feed.</h4>
-    <p>Currently displaying accounts for this user.</p>
-    <ul>
-        <li *ngFor="let currentBankAccount of bankAccounts">
-            <div>Bank Account Name: {{currentBankAccount.name}}</div>
-            <div>Bank Account Balance: ${{currentBankAccount.balance}}</div>
-            <div>Bank Account Description: {{currentBankAccount.description}}</div>
-            <br/>
-        </li>
-    </ul>
-</div>
+<section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+    <app-dashboard-logged></app-dashboard-logged>
+    <div class="formBox">
+        <h4>Bank Account Feed.</h4>
+        <ul>
+            <li *ngFor="let currentBankAccount of bankAccounts">
+                <div>Bank Account Name: {{currentBankAccount.name}}</div>
+                <div>Bank Account Balance: ${{currentBankAccount.balance}}</div>
+                <div>Bank Account Description: {{currentBankAccount.description}}</div>
+                <br/>
+            </li>
+        </ul>
+    </div>
+</section>
