--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,3 +1,4 @@
+<div></div>
 <div class="formBox">
     <button routerLink="/createBankAccountForm" class="btn btn-primary">Create Bank Account</button>
     <h4>This is our Bank Account Feed.</h4>
