--- a/src/app/dashboard-logged/dashboard-logged.component.html
+++ b/src/app/dashboard-logged/dashboard-logged.component.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" routerLink="/createBankAccountForm">Create Account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/login">Logout</a>
+                <a class="nav-link" routerLink="/logout">Logout</a>
             </li>
         </ul>
     </div>
