--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">CashOverflow</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -13,4 +13,25 @@
             </li>
         </ul>
     </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container">
+        <a href="#" class="navbar-brand">CashOverflow</a>
+        <div id="main-nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li><a href="#" class="nav-item nav-link active">Home</a></li>
+                <li><a href="#" class="nav-item nav-link">About Us</a></li>
+                <li class="dropdown">
+                    <a href="#" class="nav-item nav-link" data-toggle="dropdown">Services</a>   
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+                   
+                </li>
+                <li><a href="#" class="nav-item nav-link">Contact</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
+
