updated whole file structure

--- a/src/app/page-layouts/register-page/register-page.component.html
+++ b/src/app/page-layouts/register-page/register-page.component.html
@@ -1,4 +1,4 @@
 <section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-    <app-dashboard></app-dashboard>
-    <app-login></app-login>
+    <app-navbar-login></app-navbar-login>
+    <app-register-user></app-register-user>
 </section>
