--- a/src/app/components/navbar-login/navbar-login.component.css
+++ b/src/app/components/navbar-login/navbar-login.component.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&family=Moon+Dance&display=swap');
-
 .formBox {
     opacity: 100%;
     padding-right: 50%;
     padding-left: 1%;
 }
-.ml-auto, .mx-auto {
+
+.ml-auto,
+.mx-auto {
     margin-left: auto!important;
 }
 
@@ -13,7 +14,7 @@
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Moon Dance', cursive;
     font-size: 4vw;
-  }
-  
-  /* -------------------------------------------- */
-  
+}
+
+
+/* -------------------------------------------- */
