--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -22,16 +22,14 @@
             <ul class="navbar-nav ml-auto">
                 <li><a href="#" class="nav-item nav-link active">Home</a></li>
                 <li><a href="#" class="nav-item nav-link">About Us</a></li>
-                <li class="dropdown">
-                    <a href="#" class="nav-item nav-link" data-toggle="dropdown">Services</a>   
+                <li class="nav-item active">
+                    <a class="nav-link" routerLink="/login">Login</a>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
-                   
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/register">Register</a>
                 </li>
                 <li><a href="#" class="nav-item nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
 </nav>
-
