--- a/src/app/page-layouts/login-page/login-page.component.html
+++ b/src/app/page-layouts/login-page/login-page.component.html
@@ -1,4 +1,4 @@
 <section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-    <app-dashboard-logged></app-dashboard-logged>
-    <app-feed></app-feed>
+    <app-navbar-login></app-navbar-login>
+    <app-login></app-login>
 </section>
