--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,5 +1,6 @@
 <section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
     <app-dashboard-logged></app-dashboard-logged>
+    <app-transfer-money-owned></app-transfer-money-owned><!--delete this...-->
     <div class="formBox">
         <h4>Bank Account Feed.</h4>
         <ul>
