--- a/src/app/components/income-expense/income-expense.component.html
+++ b/src/app/components/income-expense/income-expense.component.html
@@ -15,8 +15,7 @@
                             <select id="accounts" formControlName="accounts" class="form-select"
                                 aria-label="Choose a transaction type" required>
                                 <option selected disabled>Select an account for a transaction</option>
-                                <option *ngFor="let account of accounts" value="account.id">{{account.name}}
-                                    {{account.balance}}</option>
+                                <option *ngFor="let account of accounts" value="account.id" formControlName="accountId">{{account.name}} {{"$" + account.balance}}</option>
                             </select>
                         </div>
                         <div form="form-outline mb-4">
