--- a/src/app/components/register-user/register-user.component.html
+++ b/src/app/components/register-user/register-user.component.html
@@ -11,32 +11,32 @@
                             <form [formGroup]="registerForm" (ngSubmit)="register()">
 
                                 <div class="form-outline mb-4">
-                                    <input type="text" id="username" class="form-control" formControlName="username" required/>
+                                    <input type="text" id="username" class="form-control" formControlName="username" autocomplete=off required/>
                                     <label class="form-label" for="username">Username</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="text" id="firstname" class="form-control" formControlName="firstName" required/>
+                                    <input type="text" id="firstname" class="form-control" formControlName="firstName" autocomplete=off required/>
                                     <label class="form-label" for="email">Firstname</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="test" id="lastname" class="form-control" formControlName="lastName" required/>
+                                    <input type="text" id="lastname" class="form-control" formControlName="lastName" autocomplete=off required/>
                                     <label class="form-label" for="lastname">Lastname</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="email" id="email" class="form-control" formControlName="email" required/>
-                                    <label class="form-label" for="email">Email</label>
+                                    <input type="email" id="email1" class="form-control" formControlName="email" autocomplete=off required/>
+                                    <label class="form-label" for="email1">Email</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="password" id="password" class="form-control" formControlName="password" [(ngModel)]="password" required/>
+                                    <input type="password" id="password" class="form-control" formControlName="password" [(ngModel)]="password" autocomplete=off required/>
                                     <label class="form-label" for="password">Password</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="password" id="password2" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" required/>
+                                    <input type="password" id="password2" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" autocomplete=off required/>
                                     <label class="form-label" for="password2">Confirm password</label>
                                 </div>
 
