--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -15,14 +15,14 @@
     </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-md navbar-light bg-light">
-    <div class="container">
-        <a href="#" class="navbar-brand">CashOverflow</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        <div id="main-nav" class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a routerLink="/login" class="navbar-brand">CashOverflow</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item active">
                     <a class="nav-link" routerLink="/login">Login</a>
                 </li>
