--- a/src/app/transfer-money-owned/transfer-money-owned.component.html
+++ b/src/app/transfer-money-owned/transfer-money-owned.component.html
@@ -9,4 +9,5 @@
     <select class="form-control" id="account2" required>
         <option *ngFor="let account of bankAccounts" [value]="account.name">{{account.name}}</option>
     </select>
+    <button type="button" class="btn btn-default" (click)="onSubmit()">submit</button>
 </div>
