--- a/src/app/transfer-money-owned/transfer-money-owned.component.html
+++ b/src/app/transfer-money-owned/transfer-money-owned.component.html
@@ -1,13 +1,19 @@
 <p>transfer-money-owned works!</p>
 
-<div class="form-group">
+<div [formGroup]="transferForm" class="form-group">
+
     <label for="account1">From: </label>
-    <select class="form-control" id="account1" required>
+    <select class="form-control" id="account1" formControlName="transferFromAccount" required>
         <option *ngFor="let account of bankAccounts" [value]="account.name">{{account.name}}</option>
     </select>
+
     <label for="account2">To: </label>
-    <select class="form-control" id="account2" required>
+    <select class="form-control" id="account2" formControlName="transferToAccount" required>
         <option *ngFor="let account of bankAccounts" [value]="account.name">{{account.name}}</option>
     </select>
+    
+    <label for="ammount">Amount: </label>
+    <input type="number" min="0" step="any" formControlName="transferAmount" required/>
+
     <button type="button" class="btn btn-default" (click)="onSubmit()">submit</button>
 </div>
