--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<!-- <router-outlet>
-</router-outlet> -->
+<router-outlet>
+</router-outlet>
+<br><br><br><br><br><br>
 <app-income-expense></app-income-expense>
+<br><br><br><br><br>
+<create-bank-account-form></create-bank-account-form>
