--- a/src/app/components/income-expense/income-expense.component.html
+++ b/src/app/components/income-expense/income-expense.component.html
@@ -16,7 +16,7 @@
                             <select [(ngModel)]="formAccountId" id="accounts" class="form-select"
                                 aria-label="Choose a transaction type" required>
                                 <option selected disabled>Select an account for a transaction</option>
-                                <option *ngFor="let account of accounts" value="account.id">{{account.name}} {{"$" +
+                                <option *ngFor="let account of accounts" [ngValue]="account.id">{{account.name}} {{"$" +
                                     account.balance}}
                                 </option>
                             </select>
@@ -24,21 +24,17 @@
                         </div>
                         <div form="form-outline mb-4">
                             <label for="type">Type</label>
-                            <select [(ngModel)]="formTransactionType" id="type" class="form-select"
+                            <select [(ngModel)]="formTransactionType" id="type" type="number" class="form-select"
                                 aria-label="Choose a transaction type" required>
                                 <option selected disabled>Choose a transaction type</option>
-                                <option value="2">Income</option>
-                                <option value="1">Expense</option>
+                                <option value=2>Income</option>
+                                <option value=1>Expense</option>
                             </select>
                         </div>
                         <div form="form-outline mb-4">
                             <label for="amount">Amount</label>
                             <input [(ngModel)]="formAmount" class="form-control" id="amount" type="number" step="0.01"
                                 min="0.01" required>
-                        </div>
-                        <div form="form-outline mb-4">
-                            <label for="name">Name</label>
-                            <input [(ngModel)]="formName" class="form-control" id="name" type="text" required>
                         </div>
                         <div form="form-outline mb-4">
                             <label for="exampleFormControlTextarea1">Description</label>
