created new page routing for transfering money between accounts

--- a/src/app/components/navbar-general/navbar-general.component.html
+++ b/src/app/components/navbar-general/navbar-general.component.html
@@ -61,6 +61,9 @@
                     <a class="nav-link" routerLink="/createBankAccountForm">Create Bank Account</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" routerLink="/transferMoneyBankAccount">Transfer Money Between Accounts</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" routerLink="/logout">Logout</a>
                 </li>
             </ul>
