--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,7 +1,7 @@
-<div class="col-md-10 ">
+<div *ngIf="bankAccounts.length >= 1" class="col-md-10 ">
     <div class="row ">
         <div class="col-xl-6 col-lg-6" *ngFor="let currentBankAccount of bankAccounts;index as i">
-            <div class="card " [ngClass]="cardBackG[(i%4)]">
+            <div class="card " [ngClass]="cardBackG[(0)]">
                 <div class="card-statistic-3 p-4" (click)="transferingToBankAccountPage(currentBankAccount)">
                     <div class="card-icon card-icon-large"><i class="fas fa-shopping-cart">{{currentBankAccount.name}}</i></div>
                     <div class="mb-4">
@@ -29,3 +29,16 @@
         </div>
     </div>
 </div>
+<!-- <div *ngIf="bankAccounts.length < 1" class="col-md-10 ">
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="card" style="border-radius: 15px;">
+                    <div class="card-body p-5">
+                        <h3 class="text-center mb-5">No Accounts to show.</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
