finished frontend for income and expense

--- a/src/app/components/income-expense/income-expense.component.html
+++ b/src/app/components/income-expense/income-expense.component.html
@@ -9,6 +9,10 @@
                         Transaction Created Successfully
                     </div>
 
+                    <div *ngIf="transactionSuccess == 2" class="alert alert-primary my-2">
+                        Transaction Created Successfully
+                    </div>
+
                     <div class="form-group">
                         <div form="form-outline mb-4">
                             <label for="accounts">Accounts</label>
