--- a/src/app/components/create-bank-account-form/create-bank-account-form.component.html
+++ b/src/app/components/create-bank-account-form/create-bank-account-form.component.html
@@ -23,7 +23,9 @@
                             </select>
                             </div>
                             <br/>
-                            <button type="submit" class="btn btn-primary">Create Account</button>
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" class="btn btn-primary">Create Account</button>
+                            </div>
                         </form>
                     </div>
                 </div>
