--- a/src/app/components/income-expense/income-expense.component.html
+++ b/src/app/components/income-expense/income-expense.component.html
@@ -3,37 +3,52 @@
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
             <div class="card" style="border-radius: 15px;">
                 <div class="card-body p-5">
-                    <h2 class="text-uppercase text-center mb-5">New Transaction</h2> 
-                    
+                    <h2 class="text-center mb-5">Manage Account Balance</h2>
+
                     <div *ngIf="transactionSuccess == 1" class="alert alert-primary my-2">
                         Transaction Created Successfully
                     </div>
 
-                    <form [formGroup]="transactionForm" (ngSubmit)="transaction()">
+                    <div *ngIf="transactionSuccess == 2" class="alert alert-primary my-2">
+                        Transaction Created Successfully
+                    </div>
+
+                    <div class="form-group">
+                        <div form="form-outline mb-4">
+                            <label for="accounts">Accounts</label>
+
+                            <select [(ngModel)]="formAccountId" id="accounts" class="form-select" aria-label="Choose a transaction type" required>
+                                <option selected disabled>Select an account for a transaction</option>
+                                <option *ngFor="let account of accounts" [ngValue]="account.id">{{account.name}} {{"$" +
+                                    account.balance}}
+                                </option>
+                            </select>
+
+                        </div>
                         <div form="form-outline mb-4">
                             <label for="type">Type</label>
-                            <select id="type" formControlName="type" class="form-select" aria-label="Choose a transaction type" required>
+                            <select [(ngModel)]="formTransactionType" id="type" type="number" class="form-select" aria-label="Choose a transaction type" required>
                                 <option selected disabled>Choose a transaction type</option>
-                                <option value="2">Income</option>
-                                <option value="1">Expense</option>
+                                <option [ngValue]=2>Income</option>
+                                <option [ngValue]=1>Expense</option>
                             </select>
                         </div>
-                    <div form="form-outline mb-4">
-                        <label for="amount">Amount</label>
-                        <input class="form-control" id="amount" type="number" step="0.01" min="0.01" formControlName="amount" required>
+                        <div form="form-outline mb-4">
+                            <label for="amount">Amount</label>
+                            <input [(ngModel)]="formAmount" class="form-control" id="amount" type="number" step="0.01" min="0.01" required>
+                        </div>
+                        <div form="form-outline mb-4">
+                            <label for="exampleFormControlTextarea1">Description</label>
+                            <textarea [(ngModel)]="formDescription" class="form-control" id="exampleFormControlTextarea1" rows="2" required></textarea>
+                        </div>
+                        <br/>
+                        <div class="d-flex justify-content-center">
+
+                            <button (click)="transaction()" class="btn btn-primary">Create
+                                Transaction</button>
+                        </div>
                     </div>
-                    <div form="form-outline mb-4">
-                        <label for="name">Name</label>
-                        <input class="form-control" id="name" type="text" formControlName="name" required>
-                    </div>
-                    <div form="form-outline mb-4">
-                        <label for="exampleFormControlTextarea1">Description</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" formControlName="description" rows="2" required></textarea>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Create Transaction</button>
-                    </div>
-                    </form>
+
+                </div>
+            </div>
         </div>
-    </div>
-</div>
