--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -16,8 +16,9 @@
 </nav> -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
     <div class="container-fluid">
-        <a routerLink="/login" class="navbar-brand">CashOverflow</a>
+        <a routerLink="/login" class="navbar-brand"><img src="../../../assets/img/dollar-coin-stack-svgrepo-com.svg" class="navbar-brand" height="40">CashOverflow</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
