changes to the register form

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
                                 <p style="color: red;">Invalid credentials. Please try again.</p>
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">User Name</label>
+                                <label for="exampleInputEmail1" class="form-label">Username</label>
                                 <input type="text" name="loginUsername" placeholder="Username" formControlName="loginUsername" class="form-control" id="exampleInputEmail1">
                             </div>
                             <div class="mb-3">
