--- a/src/app/components/register-user/register-user.component.html
+++ b/src/app/components/register-user/register-user.component.html
@@ -6,36 +6,42 @@
                     <div class="card-body p-5">
                         <h2 class="text-uppercase text-center mb-5">Register New Account</h2>
 
-                        <form [formGroup]="registerForm" (ngSubmit)="register()">
+                        <form ngNativeValidate [formGroup]="registerForm" (ngSubmit)="register()">
 
                             <div class="form-outline mb-4">
-                                <input type="text" id="username" class="form-control" formControlName="username" autocomplete=off required/>
                                 <label class="form-label" for="username">Username</label>
+                                <input type="text" id="username" placeholder="Username" class="form-control" formControlName="username" autocomplete=off required/>
+
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="text" id="firstname" class="form-control" formControlName="firstName" autocomplete=off required/>
-                                <label class="form-label" for="email">Firstname</label>
+                                <label class="form-label" for="email">First Name</label>
+                                <input type="text" id="firstname" placeholder="First Name" class="form-control" formControlName="firstName" autocomplete=off required/>
+
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="text" id="lastname" class="form-control" formControlName="lastName" autocomplete=off required/>
-                                <label class="form-label" for="lastname">Lastname</label>
+                                <label class="form-label" for="lastname">Last Name</label>
+                                <input type="text" id="lastname" placeholder="Last Name" class="form-control" formControlName="lastName" autocomplete=off required/>
+
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="email" id="email1" class="form-control" formControlName="email" autocomplete=off required/>
                                 <label class="form-label" for="email1">Email</label>
+                                <input type="email" id="email1" placeholder="Email" class="form-control" formControlName="email" autocomplete=off required/>
+
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="password" class="form-control" formControlName="password" [(ngModel)]="password" autocomplete=off required/>
                                 <label class="form-label" for="password">Password</label>
+                                <input type="password" id="password" class="form-control" formControlName="password" [(ngModel)]="password" autocomplete=off required/>
+
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="password2" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" autocomplete=off required/>
                                 <label class="form-label" for="password2">Confirm password</label>
+                                <input type="password" id="password2" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="password2" autocomplete=off required/>
+
                             </div>
 
                             <div *ngIf="regSuccess == 2" class="alert alert-danger my-2">
@@ -47,10 +53,10 @@
                             </div>
 
                             <div class="d-flex justify-content-center">
-                                <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                                <button type="submit" class="btn btn-primary">Register</button>
                             </div>
 
-                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p>
+                            <!-- <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!" class="fw-bold text-body"><u>Login here</u></a></p> -->
 
                         </form>
 
