--- a/src/app/components/transaction-list/transaction-list.component.html
+++ b/src/app/components/transaction-list/transaction-list.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="transactionArray.length > 0" class="col-md-10 ">
     <div class="card ">
         <table table class="table table-striped">
+            <caption>Bank account transaction history</caption>
             <thead>
                 <tr>
                     <th scope="col">ID</th>
